plugins {
    id 'io.micronaut.minimal.application' version '4.5.4'
}

dependencies {
    annotationProcessor 'io.micronaut.validation:micronaut-validation-processor'
    annotationProcessor 'io.micronaut.data:micronaut-data-document-processor'

    implementation 'io.micronaut:micronaut-http-server-netty'
    implementation 'io.micronaut.data:micronaut-data-mongodb'
    implementation 'io.micronaut.validation:micronaut-validation'

    runtimeOnly 'io.micronaut.mongodb:micronaut-mongo-sync'
    runtimeOnly 'ch.qos.logback:logback-classic'
    runtimeOnly 'org.yaml:snakeyaml'

    testImplementation 'io.micronaut.test:micronaut-test-junit5'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.18.0'
    testImplementation 'io.micronaut:micronaut-http-client-jdk'
    testImplementation "org.testcontainers:testcontainers:1.21.3"

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

application {
    mainClass.set('com.example.urlshortener.Application')
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    useJUnitPlatform()
}